<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>655</width>
    <height>610</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Path Tracer</string>
  </property>
  <widget class="QWidget" name="centralWidget">
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <widget class="MyGL" name="mygl">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
          <horstretch>1</horstretch>
          <verstretch>1</verstretch>
         </sizepolicy>
        </property>
        <property name="minimumSize">
         <size>
          <width>618</width>
          <height>432</height>
         </size>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QGroupBox" name="groupBox">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="minimumSize">
         <size>
          <width>631</width>
          <height>121</height>
         </size>
        </property>
        <property name="baseSize">
         <size>
          <width>631</width>
          <height>121</height>
         </size>
        </property>
        <property name="title">
         <string>Controls</string>
        </property>
        <widget class="QWidget" name="layoutWidget">
         <property name="geometry">
          <rect>
           <x>10</x>
           <y>20</y>
           <width>611</width>
           <height>91</height>
          </rect>
         </property>
         <layout class="QGridLayout" name="gridLayout">
          <item row="0" column="0" colspan="2">
           <widget class="QLabel" name="label">
            <property name="text">
             <string>Square root of pixel samples count:</string>
            </property>
            <property name="wordWrap">
             <bool>true</bool>
            </property>
           </widget>
          </item>
          <item row="0" column="2">
           <widget class="QSpinBox" name="samplesSpinBox">
            <property name="minimum">
             <number>1</number>
            </property>
            <property name="maximum">
             <number>100</number>
            </property>
            <property name="value">
             <number>10</number>
            </property>
           </widget>
          </item>
          <item row="1" column="1" colspan="2">
           <widget class="QComboBox" name="integratorSpinBox">
            <item>
             <property name="text">
              <string>Naive</string>
             </property>
            </item>
            <item>
             <property name="text">
              <string>Direct Lighting</string>
             </property>
            </item>
            <item>
             <property name="text">
              <string>Indirect Lighting</string>
             </property>
            </item>
            <item>
             <property name="text">
              <string>Full Lighting</string>
             </property>
            </item>
            <item>
             <property name="text">
              <string>Photon Mapping</string>
             </property>
            </item>
           </widget>
          </item>
          <item row="0" column="3">
           <widget class="QLabel" name="label_2">
            <property name="text">
             <string>Recursion limit:</string>
            </property>
            <property name="wordWrap">
             <bool>true</bool>
            </property>
           </widget>
          </item>
          <item row="1" column="0">
           <widget class="QLabel" name="label_3">
            <property name="text">
             <string>Integrator type:</string>
            </property>
            <property name="wordWrap">
             <bool>true</bool>
            </property>
           </widget>
          </item>
          <item row="0" column="4">
           <widget class="QSpinBox" name="recursionSpinBox">
            <property name="minimum">
             <number>1</number>
            </property>
            <property name="maximum">
             <number>100</number>
            </property>
            <property name="value">
             <number>5</number>
            </property>
           </widget>
          </item>
          <item row="1" column="3">
           <widget class="QLabel" name="label_4">
            <property name="text">
             <string>Photon count:</string>
            </property>
            <property name="wordWrap">
             <bool>true</bool>
            </property>
           </widget>
          </item>
          <item row="1" column="4">
           <widget class="QSpinBox" name="photonSpinBox">
            <property name="minimum">
             <number>10000</number>
            </property>
            <property name="maximum">
             <number>999999999</number>
            </property>
            <property name="singleStep">
             <number>1000</number>
            </property>
            <property name="value">
             <number>100000</number>
            </property>
           </widget>
          </item>
          <item row="1" column="6">
           <widget class="QDoubleSpinBox" name="doubleSpinBox">
            <property name="decimals">
             <number>4</number>
            </property>
            <property name="minimum">
             <double>0.001000000000000</double>
            </property>
            <property name="maximum">
             <double>2.000000000000000</double>
            </property>
            <property name="value">
             <double>0.010000000000000</double>
            </property>
           </widget>
          </item>
          <item row="1" column="5">
           <widget class="QLabel" name="label_5">
            <property name="text">
             <string>Search radius</string>
            </property>
           </widget>
          </item>
          <item row="0" column="5" colspan="2">
           <widget class="QCheckBox" name="checkBox_Progressive">
            <property name="text">
             <string>Progressive Preview</string>
            </property>
            <property name="checked">
             <bool>true</bool>
            </property>
           </widget>
          </item>
         </layout>
        </widget>
       </widget>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menuBar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>655</width>
     <height>20</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuFile">
    <property name="title">
     <string>File</string>
    </property>
    <addaction name="actionRender"/>
    <addaction name="actionLoad_Scene"/>
    <addaction name="actionQuit"/>
   </widget>
   <widget class="QMenu" name="menuHelp">
    <property name="title">
     <string>Help</string>
    </property>
    <addaction name="actionCamera_Controls"/>
   </widget>
   <addaction name="menuFile"/>
   <addaction name="menuHelp"/>
  </widget>
  <action name="actionQuit">
   <property name="text">
    <string>Quit</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+Q</string>
   </property>
  </action>
  <action name="actionLoad_Scene">
   <property name="text">
    <string>Load Scene</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+L</string>
   </property>
  </action>
  <action name="actionRender">
   <property name="text">
    <string>Render</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+R</string>
   </property>
  </action>
  <action name="actionCamera_Controls">
   <property name="text">
    <string>Camera Controls</string>
   </property>
  </action>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <customwidgets>
  <customwidget>
   <class>MyGL</class>
   <extends>QOpenGLWidget</extends>
   <header>mygl.h</header>
   <slots>
    <signal>sig_ResizeToCamera(int,int)</signal>
    <signal>sig_DisableGUI(bool)</signal>
    <slot>slot_SceneDialog()</slot>
    <slot>slot_SetNumSamplesSqrt(int)</slot>
    <slot>slot_SetRecursionLimit(int)</slot>
    <slot>slot_SetProgressiveRender(bool)</slot>
    <slot>slot_SetIntegratorType(int)</slot>
    <slot>slot_SetPhotonCount(int)</slot>
    <slot>slot_SetSearchRadius(double)</slot>
   </slots>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections>
  <connection>
   <sender>mygl</sender>
   <signal>sig_ResizeToCamera(int,int)</signal>
   <receiver>MainWindow</receiver>
   <slot>slot_ResizeToCamera(int,int)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>305</x>
     <y>182</y>
    </hint>
    <hint type="destinationlabel">
     <x>396</x>
     <y>32</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>samplesSpinBox</sender>
   <signal>valueChanged(int)</signal>
   <receiver>mygl</receiver>
   <slot>slot_SetNumSamplesSqrt(int)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>281</x>
     <y>533</y>
    </hint>
    <hint type="destinationlabel">
     <x>268</x>
     <y>410</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>recursionSpinBox</sender>
   <signal>valueChanged(int)</signal>
   <receiver>mygl</receiver>
   <slot>slot_SetRecursionLimit(int)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>408</x>
     <y>512</y>
    </hint>
    <hint type="destinationlabel">
     <x>488</x>
     <y>430</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>checkBox_Progressive</sender>
   <signal>toggled(bool)</signal>
   <receiver>mygl</receiver>
   <slot>slot_SetProgressiveRender(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>631</x>
     <y>532</y>
    </hint>
    <hint type="destinationlabel">
     <x>319</x>
     <y>247</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>integratorSpinBox</sender>
   <signal>currentIndexChanged(int)</signal>
   <receiver>mygl</receiver>
   <slot>slot_SetIntegratorType(int)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>249</x>
     <y>565</y>
    </hint>
    <hint type="destinationlabel">
     <x>246</x>
     <y>408</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>mygl</sender>
   <signal>sig_DisableGUI(bool)</signal>
   <receiver>MainWindow</receiver>
   <slot>slot_DisableGUI(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>454</x>
     <y>272</y>
    </hint>
    <hint type="destinationlabel">
     <x>491</x>
     <y>567</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>photonSpinBox</sender>
   <signal>valueChanged(int)</signal>
   <receiver>mygl</receiver>
   <slot>slot_SetPhotonCount(int)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>408</x>
     <y>559</y>
    </hint>
    <hint type="destinationlabel">
     <x>403</x>
     <y>378</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>doubleSpinBox</sender>
   <signal>valueChanged(double)</signal>
   <receiver>mygl</receiver>
   <slot>slot_SetSearchRadius(double)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>625</x>
     <y>572</y>
    </hint>
    <hint type="destinationlabel">
     <x>584</x>
     <y>400</y>
    </hint>
   </hints>
  </connection>
 </connections>
 <slots>
  <slot>slot_ResizeToCamera(int,int)</slot>
  <slot>slot_DisableGUI(bool)</slot>
 </slots>
</ui>
